--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.23.0"
+    "mongoose": "^8.23.0",
+    "openai": "^6.21.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
