Updated user.js, added test routes (with REST client ext file), and implimented OpenAI api for puzzle generation and answer validaton

--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "ai": "^6.0.85",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.23.0",
+    "open": "^11.0.0",
     "openai": "^6.21.0"
   },
   "devDependencies": {
