--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.23.0",
     "open": "^11.0.0",
-    "openai": "^6.21.0"
+    "openai": "^6.21.0",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
